# recast-obs-plugin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
data/locale/: en-US.ini
installer/: installer.nsi
src/: plugin-main.c  recast-auth.cpp  recast-auth.h  recast-chat.cpp  recast-chat.h  recast-config-dialog.cpp  recast-config-dialog.h  recast-config.c  recast-config.h  recast-dock-manager.cpp  recast-dock-manager.h  recast-dock.cpp  recast-dock.h  recast-events.cpp  recast-events.h  recast-multistream.cpp  recast-multistream.h  recast-output.c  recast-output.h  recast-platform-icons.cpp  recast-platform-icons.h  recast-preview-dock.cpp  recast-preview-dock.h  recast-preview-widget.cpp  recast-preview-widget.h  recast-protocol.c  recast-protocol.h  recast-scene-model.c  recast-scene-model.h  recast-scenes-dock.cpp  recast-scenes-dock.h  recast-service.c  recast-service.h  recast-settings-dock.cpp  recast-settings-dock.h  recast-source-tree.cpp  recast-source-tree.h  recast-sources-dock.cpp  recast-sources-dock.h  recast-ui.cpp  (+9 more)
